opam-version: "2.0"
synopsis: "Interop programming language"
version: "1.0"
maintainer: "scott@apisw.com"
authors: ["Scott Meeuwsen"]
homepage: "https://github.com/nu11ptr/interop"
bug-reports: "https://github.com/nu11ptr/interop/issues"
dev-repo: "git@github.com:nu11ptr/interop.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.10.0"}
  "dune" {>= "2.6.0"}
  "ocamlformat" {="0.15.0"}
  "menhir" {= "20200624"}
]
