[tool.poetry]
name = "interop"
version = "0.1.0"
description = "Interop programming language"
authors = ["Scott Meeuwsen <scott@apisw.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
lark-parser = "^0.11.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
flake8 = "^3.9.1"
pylint = "^2.7.4"
ipython = "^7.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
