[package]
name = "go_convert"
version = "0.1.0"
edition = "2021"

[dependencies]
ast = { path = "../ast" }

bumpalo = { version = "3.16", features = ["collections", "std"] }
convert_case = "0.6"
# Replace with upstream when PR merged
gosyn = { git = "https://github.com/nu11ptr/gosyn", features = ["serde"] }
# temporary
# serde_json = "1.0.120"
